Fixed alignment of top nav bar menu items

--- a/src/index.css
+++ b/src/index.css
@@ -179,7 +179,6 @@ header {
 #header-nav {
   flex: 1;
   align-content: center;
-  padding-top: 6px;
 }
 
 #header-links {
